--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,11 @@ body {
   font-style: normal;
   font-size: 20px;
   line-height: 150%;
-  background-color: #dff6f6;
+  background-color: black;
   background-image: url("../img/bg.png");
   background-size: 800px;
   background-repeat: repeat;
-  color: #305050;
+  color: white;
 }
 
 .logo {
@@ -51,7 +51,7 @@ h1 {
 
 .highlight {
   padding: 0.25em;
-  background: #ffe2d6;
+  background: #28bdbd;
   font-size: 1em;
 }
 
